# gateway

./: LICENSE.txt  README.md  pyproject.toml
aiogram_gateway/: client.py
aiogram_gateway/enums/: delivery_status.py  verification_status.py
aiogram_gateway/serializer/: datetime.py  default.py  enum.py  registry.py  serializer.py
aiogram_gateway/types/: base.py  delivery_status.py  request_status.py  verification_status.py
tests/: __init__.py
